--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.2.7
 bootstrap4==0.1.0
 click==7.1.2
+dominate==2.5.1
 Flask==1.1.2
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
 pytz==2020.1
 sqlparse==0.3.1
+visitor==0.1.3
 Werkzeug==1.0.1
